website/style.css
body {
  background: #1E1E23;
  margin: 0;
  font-family: 'Franklin Gothic Medium', sans-serif;
  text-align: center; /* Center align the content within the body */
}

.navigation {
  box-sizing: border-box;
  background-color: #6C97A6;
  overflow: auto;
  padding: 18px 50px;
  position: relative;
  top: 0;
  width: 100%;
  z-index: 999;
  display: flex;
  justify-content: space-between;
  margin: 0;
}

.navigation > li {
  display: inline-block;
}

#currentDate {
  display: inline-block;
  text-align: center; /* Center align the date */
  background-color: #37778d;
  opacity: 0.80;
  padding: 8px 8px 6px 10px;
  border-radius: 10px;
  border: 2px solid rgba(0, 0, 0, 0.5);
}

#profile {
  margin-left: auto; /* Move the profile link to the right */
}

h1 {
  text-align: center;
  font-family: 'Franklin Gothic Medium', sans-serif;
}

h1 > a {
  color: #efefef;
  text-decoration: none;
}

ul {
  padding: 0;
  margin: 0;
  text-align: center;
}

li {
  color: #efefef;
  display: inline-block;
  font-family: 'Oxygen', sans-serif;
  font-size: 16px;
  font-weight: 300;
  letter-spacing: 2px;
  padding: 8px 8px 6px 10px;
  text-transform: uppercase;
}

li a {
  text-decoration: none;
  color: #FFF;
}

#profile:hover {
  background-color: #37778d;
  opacity: 0.80;
  padding: 8px 8px 6px 10px;
  border-radius: 10px;
}

/* CSS for profile.html */

header {
  text-align: center;
  margin-bottom: 30px;
}

.navigation_profile {
  box-sizing: border-box;
  background-color: #6C97A6;
  overflow: auto;
  padding: 18px 50px;
  position: relative;
  top: 0;
  width: 100%;
  z-index: 999;
}

.navigation_profile > li {
    float: right;
  }

.card {
  overflow: hidden;
  position: relative;
  z-index: 3;
  width: 25%; 
  align-items: center;
  margin: 0 auto;
  padding: 170px 30px;
  padding-bottom: 3vh;
  border-radius: 24px;
  text-align: center;
  box-shadow: 0 100px 100px
  rgba(255, 255, 255, 0.1);
  background-color: #ffffff
}

.card::before {
  content: "";
  position: absolute;
  top: -880px;
  left: 50%;
  translate: -50% 0;
  width: 1000px;
  height: 1000px;
  border-radius: 50%;
  background-color: #37778d;
}

.background::after {
  content: "";
  position: inherit;
  right: -50vmin;
  bottom: -55vmin;
  width: inherit;
  height: inherit;
  border-radius: inherit;
  background-color: #143d81;
}

.card .logo {
  position: absolute; 
  top: 25px;
  left: 50%;
  translate: -50% 0;
  width: 84px;
  height: 84px;
}

.card > h2 {
  font-size: 22px;
  font-weight: 400;
  margin: 0 0 3vh;
  color: rgb(0 0 0 / 48%)
}

.form {
  margin: 0 auto;
  padding-bottom: 2vh;
  display: grid;
  gap: 12px;
}

.form 
:is(input, button) {
  height: 56px;
  border-radius: 28px;
  font-size: 16px;
  font-family: inherit;
}

.form > input {
  border: 0;
  padding: 0 24px;
  color: #222222;
  background-color: #ededed;
}

.form > input::placeholder {
  color: rgb(0 0 0 / 28%)
}

.form > button {
  border: 0;
  color: #f9f9f9;
  background-color: #37778d;
  display: grid;
  place-items: center;
  font-weight: 500;
  cursor: pointer;
  width: 100%;
}

.card > .profile_footer {
  color: #a1a1a1;
}

.card > .profile_footer > a {
  color: #086788;
}

/* End of profile.html */

/* contact.html */

.navigation_contact {
  box-sizing: border-box;
  background-color: #6C97A6;
  overflow: auto;
  padding: 18px 50px;
  position: relative;
  top: 0;
  width: 100%;
  z-index: 999;
  justify-content: space-between;
  align-items: right;
}

.navigation_contact > li {
  float: right;
}

.contact-wrapper {
  display: flex;
}

.contact_card {
  overflow: hidden;
  position: relative;
  margin: 0 auto;
  margin-left: 40vh;
  margin-top: 2vh;
  margin-bottom: 10vh;
  z-index: 3;
  width: 25%;
  padding: 30px 50px 44px;
  border-radius: 10px;
  text-align: left;
  box-shadow: 0 100px 100px
  rgba(255, 255, 255, 0.1);
  background-color: #ffffff
}

.contact_card::before {
  content: "";
  position: absolute;
  top: -880px;
  left: 98%;
  translate: -50% 0;
  width: 1000px;
  height: 1000px;
  border-radius: 50%;
  background-color: #37778d;
}

.contact_form > input {
  border: 0;
  border-radius: 12px;
  padding: 18px 20px;
  color: #222222;
  background-color: #ededed;
}

.contact_form > textarea {
  font-family: sans-serif;
  border: 0;
  border-radius: 12px;
  padding: 18px 20px;
  color: #222222;
  background-color: #ededed;
  max-width: 89%; 
  max-height: 90px; 
  overflow-y: auto;
}

.contact_form input[type="email"] {
  width: 90%;
  padding: 18px;
  border: 0;
  border-radius: 12px;
}

.contact_form > button {
  border: 0;
  color: #FFF;
  background-color: #37778d;
  border-radius: 12px;
  cursor: pointer;
  padding: 12px 20px;
  font-family: 'Franklin Gothic Medium', sans-serif;
  font-size: 15px;
}

.contact h1 {
  color: #ffffff;
  font-size: 60px;
  text-align: left;
  padding-left: 220px;
  padding-top: 60px;
}

.contact h4 {
  color: #efefef;
  font-size: 22px;
  padding-left: 220px;
}

/* End of contact.html */

/* Pop-up after submitting the contact form */

.popup-container {
  display: none;
  position: fixed;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  background-color: rgba(0, 0, 0, 0.5);
  z-index: 9999;
}

.popup {
  position: absolute;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
  padding: 20px;
  background-color: #f9f9f9;
  border: 1px solid #ccc;
  border-radius: 5px;
}

.popup.active {
  display: block;
}

.close-button > button {
  border: 0;
  border-radius: 10px;
  color: #efefef;
  background-color: #37778d;
  display: grid;
  place-items: center;
  font-size: 15px;
  cursor: pointer;
  font-family: 'Franklin Gothic Medium', sans-serif;
  width: 100%;
  height: 3.5vh;
}

/* End of pop-up after submitting contact form */


/* Search bar */ 

.topnav .search-container {
  position: fixed;
  float: right;
  width: 40vh;
  height: 5vh;
  display: flex;
}

.topnav input[type="text"] {
  font-size: 14px;
  background-color: #f0f0f0;
  border-radius: 14px;
  float: left; 
  display: block;
  text-align: left;
  width: 100%;
  margin: 0;
  padding: 16px;
  border: none;
}

.topnav .search-container button {
  position: absolute;
  right: 0; 
  float: none;
  height: 100%;
  width: 20%;
  border-radius: 14px;
  background: #086788;
  font-size: 14px;
  border: none;
  cursor: pointer;
}

.topnav .search-container button:hover {
  background: #37778d;
}

.topnav input[type=text] {
  float: none;
  display: block;
  text-align: left;
  width: 100%;
  margin: 0;
  padding: 2.5vh;
}

/* End of search bar */

footer {
  background-color: #2A2A30;
  background-position: center;
  text-align: center;
  position: fixed;
  bottom: 0px;
  left: 0;
  width: 100%;
  padding-top: 1.5vh;
  padding-bottom: 1vh;
  z-index: 9999; 
}

footer > h3 {
  right: 0;
  bottom: 0;
  padding: 0px 32px;
  position: absolute;
}

h3 a {
  text-decoration: none;
  color: #efefef;
}

